--- a/resources/sass/partials/_mixin.scss
+++ b/resources/sass/partials/_mixin.scss
@@ -31,5 +31,5 @@
     color: $color;
     font-size: 21px;
     top: -5px;
-    left: 16px;
+    left: 0;
 }
